2003-05-05  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-pocketgames.el
	(shimbun-pocketgames-article): New function.
	(shimbun-pocketgames-article-1): Ditto.
	(shimbun-pocketgames-make-mime-article): Ditto.
	(shimbun-pocketgames-headers): New function (Building Message-ID
	with '@' instead of `:' to display inline)
	(shimbun-pocketgames-headers-1): New function.
	(shimbun-article): Use `shimbun-pocketgames-article'.
	(shimbun-headers): Use `shimbun-pocketgames-headers'.
	(shimbun-pocketgames-comment-article): Clean up unnecessary link
	from shimbun working buffer.
	Building Message-ID with '@' instead of `:' to display inline
	images.

2003-05-04  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-plucker.el: New file.

2003-05-04  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>

	* shimbun/sb-makanai.el (shimbun-index-url): Follow the change of
	the web site.

2003-05-03  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-squeak-dev.el: New file.

	* shimbun/sb-jpo.el (shimbun-jpo-cleanup-article): Modify regexps.
	
	* shimbun/sb-jpilot.el: Require sendmail.
	(shimbun-make-contents): New method.

2003-04-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-imitate-widget-button): New variable.
	(w3m-imitate-widget-button): New function.
	(w3m-fontify-anchors): Imitate the widget button.
	(w3m-next-anchor): Look for the widget button.
	(w3m-previous-anchor): Ditto.

2003-04-30  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-jpo.el (shimbun-make-contents): Bug fixed.
	(shimbun-headers): Ditto.

2003-04-30  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-retrieve-and-render): Hide a exit status from an
	error message unless `w3m-process-exit-status'.

2003-04-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-goto-url): Improve and bug fix the find-file code.

2003-04-29  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-jpo.el: New file.
	(shimbun-jpo-contents): Modified regexp to pick up more email
	address of JPO's section.
